# python

./: README.md  requirements.txt
asyncio/: asyncio-file.py  asyncio-http.py  asyncio-lock.py  asyncio-timeout.py
basics/: install_program.py
build-projects/mlpredictor/: .gitignore  README.md  pyproject.toml
build-projects/mlpredictor/mlpredictor/: __init__.py
build-projects/mlpredictor/mlpredictor.egg-info/: PKG-INFO
build-projects/mlpredictor/tests/: test_model.py
build-projects/pyproject-legacy/: README.txt  setup.py
build-projects/pyproject-modern/: .gitignore  README.txt  pyproject.toml
clean-up-docker-images/: clean-up-docker-images.py
connect-to-node-and-run-script/: connect-via-ssh-and-run-script.py
connect-to-postgres-database/: config.py  connect.py  conntect-to-postgresdb.py  create_functions.py  create_procedure.py  create_tables.py  database.ini  insert_tables.py  query_functions.py  query_tables.py  update_tables.py  use_procedure.py
fastapi/: README.txt  fastapi-parameters.py  fastapi-query-middleware.py  fastapi-requestbody.py  fastapi-response-model.py  simple-fastapi.py
fastapi/fastapi-docker/: Dockerfile  requirements.txt
fastapi/fastapi-docker/app/: main.py
kubernetes-client/: send-list-of-pods-to-discord-channel-asyncio.py  send-list-of-pods-to-discord-channel.py
socket/: client-connection-using-socket.py  server-socket-with-threading.py
socket/templates/: server.html
webscraping/: display-data-in-columns.py  display-list-of-cartoons.py  get-current-temperature.py  web-scraping-using-requests-and-beautifulsoup.py
(+2 files in other folders)
