[build-system]
requires = ["setuptools>=80.7.1", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mlpredictor"
version = "0.1.0"
description = "simple machine learning package for testing"
authors = [
    {name = "devops", email = "devops2025@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.6.1",
]

[project.urls]
"Homepage" = "https://github.com/cmunsayac/mlpredictor"